correction de l alignement des listes (partie fonctionnement)

--- a/SASS/media_queries_index.scss
+++ b/SASS/media_queries_index.scss
@@ -160,6 +160,7 @@
         & .block_list{
             ol{
                 flex-direction: column;
+                align-items: center;
                 > li{
                     width: 80%;
                     margin-bottom:1em;
